@@ -3,6 +3,7 @@
     * Add Net::SSLeay::SSL_CTX#set_psk_server_callback method.
     * Add Net::SSLeay::EVP_CIPHER_CTX class.
     * Add Net::SSLeay::HMAC_CTX class.
+    * Add Net::SSLeay::Callback::TlsextTicketKey class.
 0.014 2024-11-19
   [New Features]
     * Add Net::SSLeay::OCSP#single_get0_status method.
